syntax = "proto3";

message CommonReq {
    int32 _client_type = 1;
    string _client_version = 2;
    string _client_id = 3;
    string apid = 4;
    string _phone_imei = 5;
    string from = 6;
    string cuid = 7;
    int64 _timestamp = 8;
    string model = 9;
    string BDUSS = 10;
    string tbs = 11;
    int32 net_type = 12;
    string subapp_type = 13;
    string ka = 15;
    string m_api = 16;
    string m_logid = 17;
    string m_cost = 18;
    string m_result = 19;
    string m_size_u = 20;
    string sign = 23;
    string pversion = 24;
}
