syntax = "proto3";

import "CommonReq.proto";

message DataReq {
    string kw = 1;
    int32 rn = 2;
    int32 rn_need = 3;
    int32 is_good = 4;
    int32 cid = 5;
    int32 withcal = 6;
    int32 noval = 7;
    int32 with_group = 8;
    int32 need_badge = 9;
    int32 frs_rn = 10;
    int32 scr_w = 11;
    int32 scr_h = 12;
    double scr_dip = 13;
    int32 pn = 15;
    string st_type = 16;
    int32 ctime = 17;
    int32 data_size = 18;
    int32 net_error = 19;
    bool check_login = 20;
    int32 class_id = 23;
    string ip_str = 24;
    string module_name = 26;
    int32 st_param = 27;
    int32 smile_grade = 28;
    bool support_noun = 29;
    int32 user_id = 31;
    int32 no_un = 33;
    string portrait = 34;
    string mobile = 35;
    string email = 36;
    bool debug = 37;
    string cookie = 38;
    CommonReq common = 39;
}
