syntax = "proto3";

import "CommonReq.proto";

message DataReq {
    CommonReq common = 1;
    uint32 need_abstract = 2;
    uint32 st_type = 3;
    uint32 scr_w = 4;
    uint32 scr_h = 5;
    uint32 q_type = 6;
    uint64 user_id = 7;
    string da_idfa = 8;
    string platform = 9;
    uint64 forum_id = 10;
    int32 pn = 11;
    double scr_dip = 12;
    string forum_name = 13;
}
