syntax = "proto3";

import "CommonReq.proto";

message DataReq {
    uint32 category_id = 1;
}
